<resources>
    <string name="app_name">Playground</string>

    <string name="ui_implicit_intents">Implicit intents</string>
    <string name="ui_intents">Intents</string>
    <string name="ui_start_implicit_intents">Start Implicit Intents</string>
    <string name="ui_intent_extras">Intent Extras</string>
    <string name="ui_send_int">Send int</string>
    <string name="ui_received_int">Received int:</string>
    <string name="ui_activities">Activities</string>
    <string name="ui_activity_lifecycle">Activity Lifecycle</string>
    <string name="ui_views">Views</string>
    <string name="ui_listview">ListView</string>
    <string name="ui_persistance">Persistance</string>
    <string name="ui_parse_json">Parse JSON</string>
    <string name="ui_data">Data</string>
    <string name="ui_parse">Parse</string>
    <string name="ui_shared_preferences">Shared Preferences</string>
    <string name="ui_files">Files</string>
    <string name="ui_open_file">Open File</string>
    <string name="ui_save_file">Save File</string>
    <string name="ui_go_home">Go Home</string>
    <string name="ui_fingerprinting">Fingerprinting</string>
    <string name="ui_fragment_lifecycle">Fragment Lifecycle</string>
    <string name="ui_example_fragment">Example Fragment</string>
    <string name="ui_control_flow">Controlflow</string>
    <string name="ui_user">User</string>
    <string name="ui_toast">Toast</string>
    <string name="ui_notification">Notification</string>
    <string name="ui_intent_request">Intent Request</string>
    <string name="ui_intent_receiver">Intent Receiver</string>
    <string name="ui_dialog">Dialog</string>
    <string name="ui_picker">Picker</string>
    <string name="ui_networking">Networking</string>
    <string name="ui_fab">Floating Action Button</string>
    <string name="ui_multithreading">Multithreading</string>
    <string name="ui_multithreading_handlers">Multithreading w Handlers</string>
    <string name="ui_retained_fragment">Retained Fragment</string>
    <string name="ui_resume">Resume</string>
    <string name="ui_dr_johannes_klein">Dr. Johannes Klein</string>
    <string name="ui_work_history">Work History</string>
    <string name="ui_call_me">Call Johannes</string>
    <string name="ui_email_me">Email Johannes</string>
    <string name="data_phone_number">+49...</string>
    <string name="data_email_address">mymail@address.com</string>
    <string name="ui_loader">Loader</string>
    <string name="ui_examples">Examples</string>
    <string name="ui_higher_or_lower">Higher or Lower</string>
    <string name="ui_number_shapes">Number Shapes</string>
    <string name="ui_tic_tac_toe">Tic Tac Toe</string>
    <string name="ui_animations">Animations</string>
    <string name="ui_video">Video</string>
    <string name="ui_audio">Audio</string>
    <string name="ui_phrase_book">Phrase Book</string>
    <string name="ui_times_tables">Times Tables</string>
    <string name="ui_architecture">Architecture</string>
    <string name="ui_timer">Timer</string>
    <string name="ui_navigation">Navigation</string>
    <string name="ui_tabs">Tabs</string>
    <string name="ui_egg_timer">Egg Timer</string>
    <string name="ui_sum_trainer">Sum Trainer</string>
    <string name="ui_download_string">Download String</string>
    <string name="ui_download_image">Download Image</string>
    <string name="ui_celebrity_guess">Celebrity Guess</string>
    <string name="ui_weather_json">Weather JSON</string>
    <string name="ui_location">Location</string>
    <string name="ui_basic_map">Basic Map</string>
    <string name="title_activity_pg_basic_map">Map</string>
    <string name="ui_location_awareness">Location Awareness</string>
    <string name="ui_hiker_watch">Hiker Watch</string>
    <string name="ui_sql_database">SQL Database</string>
    <string name="ui_webview">Webview</string>
    <string name="ui_hacker_news">Hacker News</string>

</resources>
