<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pg_activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="johannes.playground.PgActivityMain">

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/buttonActivities"
        android:text="@string/ui_activities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/buttonIntents"
        android:text="@string/ui_intents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/buttonViews"
        android:text="@string/ui_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/buttonPersistance"
        android:text="@string/ui_persistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/buttonData"
        android:text="@string/ui_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/buttonUser"
        android:text="@string/ui_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
