<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pg_activity_intents"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/buttonImplicitIntents"
        android:text="@string/ui_implicit_intents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/buttonIntentExtras"
        android:text="@string/ui_intent_extras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/buttonIntentRequest"
        android:text="@string/ui_intent_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
