<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pg_activity_activities"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/buttonActivityLifecycle"
        android:text="@string/ui_activity_lifecycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/buttonFragmentLifecycle"
        android:text="@string/ui_fragment_lifecycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/PrimaryButton"
        android:id="@+id/buttonRetainedFragment"
        android:text="@string/ui_retained_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
